Switch to string urls