@@ -1,8 +1,7 @@
 package chropro;
 
 import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.Base64;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
@@ -14,24 +13,33 @@ public class Renderer implements AutoCloseable {
 
 
     private final Chropro chrome;
-    private final URI uri;
+    private final String chromeHost;
+    private final int chromePort;
 
-    public Renderer() throws IOException {
-        this.uri = URI.create("ws://127.0.0.1:9292/devtools/browser");
-        this.chrome = new Chropro(uri);
+    public Renderer(String chromeHost, int chromePort) throws IOException {
+        this.chromeHost = chromeHost;
+        this.chromePort = chromePort;
+        this.chrome = new Chropro("ws://" + this.chromeHost + ":" + this.chromePort + "/devtools/browser");
 
     }
 
     public byte[] render(String url, int w, int h, int timeout, int sleep) throws ExecutionException, InterruptedException, IOException, TimeoutException {
-        String contextId = chrome.target.createBrowserContext().get(timeout, MILLISECONDS).browserContextId;
+        String contextId;
+
+        try {
+            contextId = chrome.target.createBrowserContext().get(timeout, MILLISECONDS).browserContextId;
+        } catch (ExecutionException e) {
+            contextId = null; // browser contexts are only supported on headless chrome
+        }
+
         String targetId = null;
         try {
             targetId = chrome.target.createTarget("about:blank", w, h, contextId).get(timeout, MILLISECONDS).targetId;
 
             // Chrome is buggy and won't let us connect unless we've refreshed the json endpoint
-            jsonEndpoint(uri).toURL().openStream().close();
+            new URL("http://" + chromeHost + ":" + chromePort + "/json").openStream().close();
 
-            try (Chropro tab = new Chropro(uri.resolve("/devtools/page/" + targetId))) {
+            try (Chropro tab = new Chropro("ws://" + chromeHost + ":" + chromePort + "/devtools/page/" + targetId)) {
                 tab.target.getTargetInfo(targetId).get(timeout, MILLISECONDS);
                 tab.page.enable().get(timeout, MILLISECONDS);
                 CompletableFuture<PageDomain.LoadEventFired> loaded = tab.page.onLoadEventFired();
@@ -54,23 +62,11 @@ public class Renderer implements AutoCloseable {
             if (targetId != null) {
                 chrome.target.closeTarget(targetId).get(timeout, MILLISECONDS);
             }
-            chrome.target.disposeBrowserContext(contextId).get(timeout, MILLISECONDS);
+            if (contextId != null) {
+                chrome.target.disposeBrowserContext(contextId).get(timeout, MILLISECONDS);
+            }
         }
     }
-
-    /**
-     * "ws://127.0.0.1:9292/devtools/browser" => "http://127.0.0.1:9292/json"
-     */
-    static URI jsonEndpoint(URI uri) {
-        try {
-            return new URI("http",
-                    uri.getUserInfo(), uri.getHost(), uri.getPort(),
-                    "/json", null, null);
-        } catch (URISyntaxException e) {
-            throw new IllegalArgumentException(e);
-        }
-    }
-
     @Override
     public void close() throws Exception {
         chrome.close();
